# SO101-chess-robot

./: .gitignore  README.md  instructions.md  pyproject.toml
configs/camera/: multi_camera.yaml  overhead.yaml
configs/dataset/: collect_chess_demos.yaml
configs/eval/: chess_eval.yaml
configs/perception/: perception.yaml  piece_cnn.yaml
configs/policy/: hil_rl.yaml  pi05.yaml  residual_rl.yaml
configs/robot/: so101.yaml
configs/safety/: default_limits.yaml
configs/task/: chess_single_piece.yaml
docs/: architecture.md  cloud_smoke_test.md  data_collection.md  evaluation.md  hil_rl.md  perception_data_collection.md  perception_piece_cnn.md  research.md  residual_policy_learning.md  safety.md  training_pi05.md
models/: README.md
scripts/: annotate_corners.py  build_piece_manifest.py  calibrate_corners.py  capture_frames.py  chesscog_to_manifest.py  cloud_setup.sh  collect_demos.py  collect_rollouts.py  evaluate_perception_synthetic.py  evaluate_policy.py  inspect_dataset.py  make_smoke_dataset.py  piece_cnn_smoke.sh  prepare_piece_dataset.py  run_perception.py  run_policy.py  train_hil_rl.py  train_pi05.py  train_piece_cnn.py  train_residual_rl.py  verify_pipeline.py
src/chess_robot/: __init__.py
src/chess_robot/chess/: __init__.py  board_mapper.py  board_state.py  command_parser.py  move_resolver.py
src/chess_robot/data/: __init__.py  lerobot_dataset.py  schema.py  synthetic.py  validation.py
src/chess_robot/eval/: __init__.py  evaluator.py  failure_labels.py  metrics.py  perception_metrics.py
src/chess_robot/perception/: __init__.py  board_perception.py  board_renderer.py  camera_utils.py  chesscog_adapter.py  piece_cnn.py  piece_cnn_config.py  piece_cnn_onnx.py  piece_dataset.py  piece_locator.py  pipeline.py  square_grounding.py
src/chess_robot/policies/: __init__.py  action_composer.py  pi05_policy.py  residual_policy.py
src/chess_robot/rl/: __init__.py  hil_rl.py  replay_buffer.py  residual_learning.py  rewards.py
src/chess_robot/robot/: __init__.py  actions.py  observations.py  so101_interface.py  teleop.py
src/chess_robot/safety/: __init__.py  limits.py  safety_layer.py
src/chess_robot/utils/: __init__.py  config.py  logging.py
tests/: test_action_composer.py  test_board_mapper.py  test_board_perception.py  test_board_renderer.py  test_board_state.py  test_camera_utils.py  test_chesscog_adapter.py  test_command_parser.py  test_dataset_schema.py  test_evaluator.py  test_lerobot_dataset.py  test_logging.py  test_metrics.py  test_move_resolver.py  test_perception_metrics.py  test_perception_pipeline.py  test_pi05_policy.py  test_pi05_train.py  test_piece_cnn.py  test_piece_cnn_config.py  test_piece_cnn_scripts.py  test_piece_dataset.py  test_robot_interface.py  test_safety_layer.py  test_scaffold.py  test_square_grounding.py  test_synthetic.py
