[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-robot"
version = "0.0.0"
description = "SO-101 robot-learning pipeline that moves chess pieces from natural-language commands (pi0.5 + residual RL / HIL-RL)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
# Runtime libraries. Kept light and CUDA-free so the whole dev/test loop runs on
# the laptop. Heavy training deps (LeRobot / pi0.5, torch) live in the optional
# `train` extra and are pinned when training is wired (Milestone 3).
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Dev toolchain — pinned exactly because it gates the verification contract
# (ruff / mypy / pytest). See README and CLAUDE.md "Verification Contract".
dev = [
  "ruff==0.9.6",
  "mypy==1.15.0",
  "pytest==8.3.4",
  "types-PyYAML==6.0.12.20241230",
]
# Training extra — installed on the vast.ai GPU instance only (RTX 4090/5090),
# on top of the instance's preinstalled CUDA + PyTorch. torch is intentionally
# NOT listed so it reuses the image build. Extras: pi (pi0.5), dataset (HF
# datasets), training (accelerate). VERIFIED 2026-06-09: the pi0.5 smoke fine-tune
# ran end-to-end with lerobot 0.5.2 (torch 2.11, CUDA 13, RTX 4090). The cloud
# install is from LeRobot source (scripts/cloud_setup.sh). https://huggingface.co/docs/lerobot/pi05
train = [
  "lerobot[pi,dataset,training]==0.5.2",
]
# Local data-collection tooling (GUI), e.g. the corner-annotation script. Kept
# out of the base install; imported lazily so the package works without it.
tools = [
  "matplotlib>=3.7",
]
# Perception inference on the laptop: run the exported piece-CNN ONNX models
# (no torch). CPU/iGPU via onnxruntime; Pillow only for image-file dataset prep.
perception = [
  "onnxruntime>=1.17",
  "pillow>=10.0",
]
# Lab camera capture on the laptop (overhead/side frames -> disk) for calibration,
# few-shot photos, and perception eval. OpenCV reads the cameras; Pillow saves.
camera = [
  "opencv-python>=4.8",
  "pillow>=10.0",
]
# Perception training on the cloud GPU: the two-stage piece classifier. torch is
# intentionally NOT listed (reuse the vast.ai image's torch, as with `train`);
# torchvision supplies the ImageNet-pretrained backbones, onnx + onnxscript the
# export (recent torch routes torch.onnx.export through the dynamo exporter, which
# imports onnxscript). VERIFIED 2026-06-11: smoke ran on RTX, torch 2.11.
perception-train = [
  "torchvision>=0.17",
  "onnx>=1.15",
  "onnxscript>=0.1",
  "pillow>=10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src", "scripts", "tests"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

# Optional deps imported lazily (GUI tooling via `tools`, LeRobot via `train`,
# perception training/inference via `perception` / `perception-train`).
[[tool.mypy.overrides]]
module = [
  "matplotlib.*",
  "lerobot.*",
  "torch.*",
  "torchvision.*",
  "onnx.*",
  "onnxruntime.*",
  "PIL.*",
  "cv2.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]